--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <div id="point" class="h-5 w-5 rounded-full bg-cyan-500 fixed hidden"></div>  
     <!-- Navbar Start -->
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -88,6 +88,7 @@
       </footer>
     <!-- Footer End -->
 
-    <script src="./script.js"></script>
+    <script src="./mouseover.js"></script>
+    <script src="./mousemove.js"></script>
 </body>
 </html>
